--- a/src/index.css
+++ b/src/index.css
@@ -154,7 +154,6 @@ input[type="number"] {
 }
 
 .transaction-btn button:hover {
-  background-color: #083158;
 }
 
 .transaction-btn button.glow {
@@ -538,7 +537,7 @@ select:focus {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  padding: 0 20px 0 20px;
+  padding: 0 2px 0 2px;
   align-items: flex-end;
   color: white;
 }
@@ -572,11 +571,10 @@ small {
 .usdt {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding-top: 20px;
+  justify-content: center;
+  align-items: center;
 }
-
+  
 .eft {
   display: flex;
   flex-direction: column;
