--- a/src/index.css
+++ b/src/index.css
@@ -153,6 +153,15 @@ input[type="number"] {
   transition: box-shadow 0.3s ease;
 }
 
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 .transaction-btn button:hover {
 }
 
